# floatctl-rs

./: .env.example  .env.pooler  .evans-notes  .floatctl-config.template.toml  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE-CLAUDE-SEARCH.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_CATEGORIZATION.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_ANALYSIS.md  Cargo.toml  Cross.toml  ECOSYSTEM_SURVEY.md  EVNA-NEXT-SUMMARY.md  FLOAT-TAP-DESIGN.md  HTTP_SERVER_SPEC.md  IMPLEMENTATION_BLUEPRINT.md  INSTALL.md  LESSONS.md  LIVE-CODING-PRODUCTIVITY-ENV.md  MIGRATION-CENTRALIZED-CONFIG.md  README.md  YAGNI-SIMPLIFICATION-REPORT.md  config.toml.example  conversation-exports  evna-session_2025-11-08_20-37.jsonl  install.sh  local_config.toml  out
.claude/: settings.json
.claude/hooks/: skill-activation-prompt.sh  skill-activation-prompt.ts
.claude/skills/: floatctl-rs  skill-rules.json
.github/agents/: my-agent.agent.md
docs/: CURRENT-STATE-DOCUMENTATION.md  FLOATCTL-HUB-PROPOSAL.md  config-design.md  ctx-2025-12-04-2234-terminal-boards.md  defense-mechanism-archaeology.md
evna/: ACTIVE_CONTEXT_IMPLEMENTATION.md  AGENT-SDK-REVIEW.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES-SUMMARY.md  CLAUDE.md  COMMIT-ANALYSIS.md  FRACTAL-EVNA-PREVENTION.md  HYBRID-CAPTURE-DESIGN.md  PHASE-2.3-SPEC.md  PR-DESCRIPTION.md  README.md  REMOTE-MCP-QUICKREF.md  REMOTE-MCP-SETUP.md  SESSION-RECAP-2025-11-06.md  TUI-IMPLEMENTATION.md  evna-blocks-architecture.md  evna-system-prompt-lean.md  evna-system-prompt.md  package-lock.json  package.json  run-remote-mcp.sh  setup-user-prompt.sh  test-context-injection.ts  test-double-write.ts  test-inject-debug.ts  test-mcp-context.sh
evna-blocks/: PR_REVIEW_FIXES.md  README.md
evna-next/: .env.example  2206.01062v1.md  ACTIVE_CONTEXT_ARCHITECTURE.md  ARCHITECTURE.md  BRAIN-BOOT-SYNTHESIS-UPGRADE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  CONTEXT-BOMB-MITIGATION.md  DEPLOYMENT.md  DUAL-SOURCE-REFINEMENTS.md  QUICKSTART.md  README.md  TODO-SYNTHESIS.md  package-lock.json  package.json  pnpm-lock.yaml  test-mcp-resources.ts  tsconfig.json
floatctl-bridge/: Cargo.toml
floatctl-bridge/src/: append.rs  lib.rs
floatctl-claude/: ARCHITECTURE.md  Cargo.toml
floatctl-claude/src/: lib.rs  parser.rs  stream.rs
floatctl-claude/src/commands/: list_sessions.rs  mod.rs  recent_context.rs  show.rs
floatctl-cli/: Cargo.toml  README.md
floatctl-cli/src/: config.rs  main.rs  protocol.rs  reflect.rs  server.rs  sync.rs  tracing_setup.rs  ui.rs  wizard.rs
floatctl-cli/src/commands/: ask.rs  bbs.rs  bridge.rs  claude.rs  ctx.rs  evna.rs  mod.rs  script.rs  serve.rs  status.rs  system.rs
floatctl-cli/src/tui/: app.rs  commands.rs  event.rs  mod.rs  search.rs  terminal.rs  ui.rs
floatctl-cli/src/tui/components/: mod.rs
floatctl-cli/src/tui/sources/: boards.rs  filesystem.rs  home.rs  mod.rs  traits.rs
floatctl-cli/tests/: integration_smoke.rs
floatctl-core/: Cargo.toml  README.md
floatctl-core/benches/: streaming.rs
floatctl-core/benches/fixtures/: small.json
floatctl-core/src/: artifacts.rs  commands.rs  config.rs  conversation.rs  error.rs  lib.rs  markers.rs  ndjson.rs  pipeline.rs  stream.rs  sync_events.rs
floatctl-core/tests/: proptest_streaming.proptest-regressions  proptest_streaming.rs  utf8_safety.rs
floatctl-embed/: Cargo.toml  README.md
floatctl-embed/src/: config.rs  lib.rs
floatctl-embed/tests/data/: messages.ndjson
floatctl-script/: Cargo.toml
floatctl-script/src/: lib.rs
floatctl-search/: Cargo.toml
floatctl-search/src/: autorag.rs  lib.rs  parser.rs
floatctl-server/: Cargo.toml  README.md
floatctl-server/migrations/: 0001_init.sql
floatctl-server/src/: db.rs  error.rs  lib.rs  models.rs  server.rs  state.rs
floatctl-server/src/bbs/: board.rs  config.rs  frontmatter.rs  handlers.rs  inbox.rs  memory.rs  migrations.rs  mod.rs  models.rs
floatctl-server/src/cli/: invoker.rs  mod.rs
floatctl-server/src/db/: mod.rs  pool.rs
floatctl-server/src/db/repos/: boards.rs  inbox.rs  messages.rs  mod.rs  scratchpad.rs  threads.rs
floatctl-server/src/http/: error.rs  extractors.rs  mod.rs  server.rs
floatctl-server/src/http/routes/: bbs_api.rs  boards.rs  cli.rs  dispatch.rs  health.rs  inbox.rs  magic.rs  messages.rs  mod.rs  scratchpad.rs  status.rs  threads.rs
floatctl-server/src/models/: board.rs  marker.rs  message.rs  mod.rs  pagination.rs  persona.rs  thread.rs  validation.rs
floatctl-server/src/routes/: api.rs  bbs.rs  boards.rs  cli.rs  common.rs  health.rs  inbox.rs  mod.rs  threads.rs
floatctl-server/src/server/: db.rs  error.rs  mod.rs  models.rs
floatctl-server/src/server/routes/: boards.rs  cli.rs  common.rs  health.rs  inbox.rs  mod.rs  threads.rs
floatctl-tauri/: Cargo.toml  tauri.conf.json
floatctl-tauri/src/: commands.rs  lib.rs  main.rs  protocol.rs  state.rs
floatctl-tauri/src/sources/: bbs.rs  filesystem.rs  jobs.rs  mod.rs  search.rs  static_list.rs
floatctl-tauri/ui/: index.html  package.json  vite.config.ts
floatctl-tauri/ui/src/: main.ts
floatctl-tauri/ui/src/components/: KeyHandler.ts  VirtualList.ts
floatctl-tauri/ui/src/lib/: commands.ts  protocol.ts
floatctl-tauri/ui/src/stores/: items.ts  navigation.ts
floatctl-tauri/ui/src/styles/: base.css  components.css  layout.css
floatctl-tui/: Cargo.toml  README.md
floatctl-tui/src/: app.rs  lib.rs  main.rs  mode.rs
floatctl-tui/src/agent/: mod.rs
floatctl-tui/src/block/: mod.rs  parser.rs  types.rs
floatctl-tui/src/board/: mod.rs
floatctl-tui/src/config/: mod.rs
floatctl-tui/src/db/: mod.rs  schema.sql
floatctl-tui/src/input/: mod.rs
floatctl-tui/src/sync/: mod.rs
floatctl-tui/src/ui/: board_panel.rs  command_bar.rs  layout.rs  mod.rs  scratch_panel.rs  status_bar.rs
migrations/: 0001_init.sql  0002_performance_indexes.sql  0003_add_chunk_support.sql  0004_active_context_stream.sql  0010_server_schema.sql
scripts/: README.md  bootstrap.sh
src/: cli.rs  config.rs  filters.rs  input.rs  main.rs  model.rs  render_json.rs  render_md.rs  slug.rs  state.rs  util.rs
(+171 files in other folders)
