[workspace]
members = [
    "floatctl-core",
    "floatctl-cli",
    "floatctl-embed",
    "floatctl-bridge",
    "floatctl-claude",
    "floatctl-script",
    "floatctl-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Floatctl Contributors"]

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "5.0"
futures = "0.3"
once_cell = "1.19"
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "chrono",
    "uuid",
] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "signal", "process", "net"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
pgvector = { version = "0.4", features = ["sqlx"] }
indicatif = "0.17"
rayon = "1.10"
num_cpus = "1.16"
tempfile = "3.14"
tiktoken-rs = "0.5"
cli-clipboard = "0.4"
md5 = "0.7"

[profile.release]
# Link-time optimization for better performance
lto = "thin"
# Single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip debug symbols for smaller binaries
strip = true
# Maximum optimization level
opt-level = 3
# Abort on panic for smaller binary size
panic = "abort"

[profile.bench]
# Benchmarks inherit release optimizations
inherits = "release"
