[package]
name = "floatctl-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
md5 = { workspace = true }

# Local dependencies
floatctl-core = { path = "../floatctl-core" }

[dev-dependencies]
tempfile = { workspace = true }
