[package]
name = "floatctl-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "floatctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true, features = ["derive"] }
cli-clipboard = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
floatctl-core = { path = "../floatctl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dependencies.floatctl-embed]
path = "../floatctl-embed"
optional = true

[features]
default = ["embed"]
embed = ["floatctl-embed"]
