[package]
name = "floatctl-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "floatctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
cli-clipboard = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
floatctl-core = { path = "../floatctl-core" }
hostname = "0.4"
floatctl-bridge = { path = "../floatctl-bridge" }
floatctl-claude = { path = "../floatctl-claude" }
floatctl-script = { path = "../floatctl-script" }
floatctl-server = { path = "../floatctl-server" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
which = "6.0"

[dependencies.floatctl-embed]
path = "../floatctl-embed"
optional = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"

[features]
default = ["embed"]
embed = ["floatctl-embed"]
