[package]
name = "floatctl-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "floatctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
cli-clipboard = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
floatctl-core = { path = "../floatctl-core" }
hostname = "0.4"
indicatif = { workspace = true }
inquire = "0.7"
floatctl-bridge = { path = "../floatctl-bridge" }
floatctl-claude = { path = "../floatctl-claude" }
floatctl-script = { path = "../floatctl-script" }
floatctl-search = { path = "../floatctl-search" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true }
walkdir = { workspace = true }
which = "6.0"
reqwest = { workspace = true }

[dependencies.floatctl-embed]
path = "../floatctl-embed"
optional = true

[dependencies.floatctl-server]
path = "../floatctl-server"
optional = true

# OpenTelemetry dependencies (optional, enabled via telemetry feature)
[dependencies.opentelemetry]
workspace = true
optional = true

[dependencies.opentelemetry_sdk]
workspace = true
optional = true

[dependencies.opentelemetry-otlp]
workspace = true
optional = true

[dependencies.tracing-opentelemetry]
workspace = true
optional = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3"

[features]
default = ["embed"]
embed = ["floatctl-embed"]
server = ["floatctl-server"]
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
