[package]
name = "floatctl-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
indicatif = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = { workspace = true }

[features]
default = ["rt"]
rt = ["tokio"]

[[bench]]
name = "streaming"
harness = false
