[package]
name = "floatctl-embed"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
floatctl-core = { path = "../floatctl-core" }
reqwest = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
pgvector = { workspace = true }
