[package]
name = "floatctl-embed"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
floatctl-core = { path = "../floatctl-core" }
futures = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "io-std"] }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
pgvector = { workspace = true }
indicatif = { workspace = true }
once_cell = { workspace = true }
tiktoken-rs = { workspace = true }
walkdir = "2"
