[package]
name = "floatctl-script"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
