[package]
name = "floatctl-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FloatQL parser and Cloudflare AutoRAG search for floatctl"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# Additional dependencies
dirs.workspace = true
dotenvy.workspace = true
indicatif.workspace = true
url = "2.5"
