[package]
name = "floatctl-server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
name = "floatctl_server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "net", "process"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
