[package]
name = "floatctl-server"
description = "HTTP server for floatctl - boards, threads, messages, and CLI bridge"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core
floatctl-core = { path = "../floatctl-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Utilities
chrono = { workspace = true }
chrono-tz = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
