[package]
name = "floatctl-tui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[[bin]]
name = "floatctl-tui"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Additional dependencies
regex = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
